--- a/html/booking.html
+++ b/html/booking.html
@@ -11,6 +11,7 @@
             }
             body img {
                 width: 15%;
+                min-width: 300px;
             }
             input[type='number'] {
                 font-size: 7em;
@@ -26,6 +27,7 @@
                 margin: 10px auto;
                 -moz-appearance: button;
                 -webkit-appearance: button;
+                min-width: 160px;
             }
         </style>
     </head>
