--- a/html/confirm.html
+++ b/html/confirm.html
@@ -11,6 +11,7 @@
             }
             body img {
                 width: 15%;
+                min-width: 300px;
             }
         </style>
     </head>
