change method to get

--- a/html/booking.html
+++ b/html/booking.html
@@ -34,7 +34,7 @@
     <body>
         <img src="../images/foodpartners logo.png" alt="Foodpartners Logo">
         <h1>Enter the number of seats to reserve:</h1>
-        <form class="seat" action="confirm.html" method="post">
+        <form class="seat" action="confirm.html" method="get">
             <input type="number" name="seats" value="" maxlength="3">
             <input type="submit" value="Submit">
         </form>
