use dropdowns for detail testing

--- a/html/secret.html
+++ b/html/secret.html
@@ -7,8 +7,27 @@
         <h1>For Michael's Sole Testing Purposes</h1>
         <p><a href="holywings://membership/verify?token=sometoken">Verify Test</a></p>
         <p><a href="holywings://membership/resetpassword?username=michaellimbong@gmail.com&token=310519">Reset Password Test</a></p>
-        <p><a href="holywings://event/1">Event Test</a></p>
-        <p><a href="holywings://promo/1">Promo Test</a></p>
-        <p><a href="holywings://news/1">News Test</a></p>
+        <div>
+            <h2>Detail Item Testing</h2>
+            <select id="detail_type">
+                <option value="event">Event</option>
+                <option value="promo">Promo</option>
+                <option value="news">News</option>
+            </select>
+            <label for="detail_id">ID: </label>
+            <input type="number" id="detail_id" name="detail_id" />
+            <script>
+                generateLink = () => {
+                    var id = document.getElementById("detail_id").value;
+                    var detail = document.getElementById("detail_type").value;
+                    var url = `holywings://${detail}/${id}`;
+                    console.log(url);
+                    window.location.href = url;
+                }
+            </script>
+            <button onclick="generateLink()">
+                Generate Link
+            </button>    
+        </div>
     </body>
 </html>
