--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
-    <script type="text/javascript">
-      window.location.replace("html/index.html");
-    </script>
-  </head>
-  <body>
+    <title>Michael Lim</title>
+    
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/master.css">
+    
 
+  </head>
+
+  <body>
+    <div id="root">
+      <h1>
+        Hi! Welcome to my web page!
+      </h1>
+      <p>I am currently a bit busy right now, so this website is still under construction. Anyway, thank you for visiting my webpage and looking at my profile. It means a lot to me :).</p>
+      <h3 class="action-msg">In the meantime, check out my social media accounts!</h3>
+      <div id="soc-med">
+        <div><iframe class="soc-med-img" allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fmichaellimair&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe></div>
+        <div><a href="https://www.github.com/michaellimair"><img class="soc-med-img" src="images/github.png" alt="GitHub"></a></div>
+        <div><a href="https://instagram.com/michaelxlimb"><img class="soc-med-img" src="images/ig.png" alt="Instagram"></a></div>
+        <div><a href="https://www.linkedin.com/in/michaellimair"><img class="soc-med-img" src="images/linkedin.png" alt="LinkedIn"></a></div>
+      </div>
+      <h3 class="action-msg">Also check out the past apps that I made at various points in my life as a computer scientist!</h3>
+      <div id="apps">
+        <div>
+          <div class="app-img"><img src="images/ustransit.png" alt="USTransit"></div>
+          <div class="app-title">USTransit</div>
+          <div><a href="https://apps.apple.com/app/ustransit/id1475481762?l=en"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+          <div><a href="https://play.google.com/store/apps/details?id=com.socif.ustransit&hl=en_US"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>
+        </div>
+        <div>
+          <div class="app-img"><img src="images/holywings.png" alt="Holywings Indonesia"></div>
+          <div class="app-title">Holywings Indonesia</div>
+          <div>Coming on February 10th</div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div>
+        <p>Google Play and the Google Play logo are trademarks of Google LLC.</p>
+        <p>Mac and macOS are trademarks of Apple Inc., registered in the U.S. and other countries.</p>
+      </div>
+    </footer>
   </body>
 </html>
