fix apple trademark

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <footer>
       <div>
         <p>Google Play and the Google Play logo are trademarks of Google LLC.</p>
-        <p>Mac and macOS are trademarks of Apple Inc., registered in the U.S. and other countries.</p>
+        <p>Apple, the Apple logo, and App Store are trademarks of Apple Inc., registered in the U.S. and other countries.</p>
       </div>
     </footer>
   </body>
