add links for holywings app

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/master.css">
-    
-
   </head>
 
   <body>
@@ -14,7 +12,7 @@
       <h1>
         Hi! Welcome to my web page!
       </h1>
-      <p>I am currently a bit busy right now, so this website is still under construction. Anyway, thank you for visiting my webpage and looking at my profile. It means a lot to me :).</p>
+      <p>I am currently a bit busy right now with the Holywings Indonesia project, so I have not had the time to make this website prettier. Anyway, thank you for visiting my webpage and looking at my profile. It means a lot to me :).</p>
       <h3 class="action-msg">In the meantime, check out my social media accounts!</h3>
       <div id="soc-med">
         <div><iframe class="soc-med-img" allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fmichaellimair&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe></div>
@@ -33,7 +31,8 @@
         <div>
           <div class="app-img"><img src="images/holywings.png" alt="Holywings Indonesia"></div>
           <div class="app-title">Holywings Indonesia</div>
-          <div>Coming on February 10th</div>
+          <div><a href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+          <div><a href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>
         </div>
       </div>
     </div>
