align apps to the left

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>
         Hi! Welcome to my web page!
       </h1>
-      <p>My name is <span id="myname">Michael Lim</span>, currently a Computer Science student at the City University of Hong Kong. Currently, I am a part-time software engineer at Holywings Indonesia and formerly a full-stack developer at SOCIF Hong Kong.</p>
+      <p>My name is <span id="myname">Michael Lim</span>, currently a Computer Science student at the City University of Hong Kong. Currently, I am a part-time software engineer at Holywings Indonesia and formerly a full-stack developer at SOCIF Hong Kong.</p><br>
       <p>I am currently a bit busy right now with the Holywings Indonesia project, so I have not had the time to make this website prettier. Anyway, thank you for visiting my webpage and looking at my profile. It means a lot to me :).</p>
       <h3 class="action-msg">In the meantime, check out my social media accounts!</h3>
       <div id="soc-med">
@@ -21,21 +21,27 @@
         <div><a href="https://instagram.com/michaelxlimb"><img class="soc-med-img" src="images/ig.png" alt="Instagram"></a></div>
         <div><a href="https://www.linkedin.com/in/michaellimair"><img class="soc-med-img" src="images/linkedin.png" alt="LinkedIn"></a></div>
       </div>
-      <h3 class="action-msg">Also check out the past apps that I made at various points in my life as a computer scientist! I am really proud to have them as my "child".</h3>
+      <h3 class="action-msg">Check out the past apps that I made at various points in my life as a computer scientist! I am really proud to have them as my "child".</h3>
       <div id="apps">
-        <div class="app-block">
-          <div class="app-img"><img src="images/ustransit.png" alt="USTransit"></div>
-          <div class="app-desc">
+        <div class="site-block">
+          <div class="site-img">
+            <img src="images/ustransit.png" alt="USTransit">
+          </div>
+          <div class="site-desc">
             <div class="app-title">USTransit (React Native)</div>
-            <div><a href="https://apps.apple.com/app/ustransit/id1475481762?l=en"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
-            <div><a href="https://play.google.com/store/apps/details?id=com.socif.ustransit&hl=en_US"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+            <div><a href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+            <div style="height: 8px;"></div>
+            <div><a href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
           </div>
         </div>
-        <div class="app-block">
-          <div class="app-img"><img src="images/holywings.png" alt="Holywings Indonesia"></div>
-          <div class="app-desc">
+        <div class="site-block">
+          <div class="site-img">
+            <img src="images/holywings.png" alt="Holywings Indonesia">
+          </div>
+          <div class="site-desc">
             <div class="app-title">Holywings Indonesia (Flutter)</div>
             <div><a href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+            <div style="height: 8px;"></div>
             <div><a href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
           </div>
         </div>
@@ -44,7 +50,7 @@
       <div id="sites">
         <div class="site-block">
           <div class="site-img">
-            <a href="https://daftarkartanu.bniremittance.com"><img src="images/brlhk.png" alt="Holywings Indonesia"></a>
+            <a href="https://daftarkartanu.bniremittance.com"><img src="images/brlhk.png" alt="BNI Remittance Limited HK"></a>
           </div>
           <div class="site-desc">
             <div class="app-title">KartaNU HK Registration System - BNI Remittance Limited (Hong Kong) (React, Node.js, Firebase)</div>
@@ -52,7 +58,7 @@
         </div>
         <div class="site-block">
           <div class="site-img">
-            <a href="https://permisi-grad-form.web.app"><img src="images/permisihk.png" alt="Holywings Indonesia"></a>
+            <a href="https://permisi-grad-form.web.app"><img src="images/permisihk.png" alt="PERMISI HK"></a>
           </div>
           <div class="site-desc">
             <div class="app-title">2019 Graduation WIshes - PERMISI (Indonesian Students' Association of City University of Hong Kong) (React, Node.js, Firebase)</div>
