fix ustransit link

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           </div>
           <div class="site-desc">
             <div class="app-title">Holywings Indonesia (Flutter)</div>
-            <div><a href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+            <div><a href="https://apps.apple.com/hk/app/ustransit/id1475481762?l=en"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
             <div style="height: 8px;"></div>
-            <div><a href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+            <div><a href="https://play.google.com/store/apps/details?id=com.socif.ustransit"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
           </div>
         </div>
       </div>
