--- a/index.html
+++ b/index.html
@@ -12,28 +12,18 @@
       <h1>
         Hi! Welcome to my web page!
       </h1>
-      <p>My name is <span id="myname">Michael Lim</span>, currently a Computer Science student at the City University of Hong Kong. Currently, I am a part-time software engineer at Holywings Indonesia and formerly a full-stack developer at SOCIF Hong Kong.</p><br>
-      <p>I am currently a bit busy right now with the Holywings Indonesia project, so I have not had the time to make this website prettier. Anyway, thank you for visiting my webpage and looking at my profile. It means a lot to me :).</p>
+      <p>My name is <span id="myname">Michael Lim</span>, currently a Computer Science student at the City University of Hong Kong. Currently, I am a part-time software engineer at EventX Limited and Holywings Indonesia and formerly a full-stack developer at SOCIF Hong Kong.</p><br>
+      <p>I am currently a bit busy right now with things in life, so I have not had the time to make this website prettier. Anyway, thank you for visiting my webpage and looking at my profile. It means a lot to me :).</p>
       <h3 class="action-msg">In the meantime, check out my social media accounts!</h3>
       <div id="soc-med">
-        <div><iframe class="soc-med-img" allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fmichaellimair&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe></div>
-        <div><a href="https://www.github.com/michaellimair"><img class="soc-med-img" src="images/github.png" alt="GitHub"></a></div>
+        <div><a href="https://www.facebook.com/michaellimair"><img class="soc-med-img" src="images/facebook.png" alt="Facebook"></a></div>
         <div><a href="https://instagram.com/michaelxlimb"><img class="soc-med-img" src="images/ig.png" alt="Instagram"></a></div>
         <div><a href="https://www.linkedin.com/in/michaellimair"><img class="soc-med-img" src="images/linkedin.png" alt="LinkedIn"></a></div>
+        <div><a href="https://www.github.com/michaellimair"><img class="soc-med-img" src="images/github.svg" alt="GitHub"></a></div>
+        <div><iframe class="soc-med-img" allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fmichaellimair&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe></div>
       </div>
       <h3 class="action-msg">Check out the past apps that I made at various points in my life as a computer scientist! I am really proud to have them as my "child".</h3>
       <div id="apps">
-        <div class="site-block">
-          <div class="site-img">
-            <img src="images/ustransit.png" alt="USTransit">
-          </div>
-          <div class="site-desc">
-            <div class="app-title">USTransit (React Native)</div>
-            <div><a href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
-            <div style="height: 8px;"></div>
-            <div><a href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
-          </div>
-        </div>
         <div class="site-block">
           <div class="site-img">
             <img src="images/holywings.png" alt="Holywings Indonesia">
@@ -45,9 +35,28 @@
             <div><a href="https://play.google.com/store/apps/details?id=com.socif.ustransit"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
           </div>
         </div>
+        <div class="site-block">
+          <div class="site-img">
+            <img src="images/ustransit.png" alt="USTransit">
+          </div>
+          <div class="site-desc">
+            <div class="app-title">USTransit (React Native)</div>
+            <div><a href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+            <div style="height: 8px;"></div>
+            <div><a href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+          </div>
+        </div>
       </div>
       <h3 class="action-msg">Here are some websites I made as side projects: some paid, some for my organization!</h3>
       <div id="sites">
+        <div class="site-block">
+          <div class="site-img">
+            <a href="https://permisi.hk"><img src="images/permisihk.png" alt="PERMISI HK"></a>
+          </div>
+          <div class="site-desc">
+            <div class="app-title">PERMISI HK Main Website (Indonesian Students' Association of the City University of Hong Kong)</div>
+          </div>
+        </div>
         <div class="site-block">
           <div class="site-img">
             <a href="https://daftarkartanu.bniremittance.com"><img src="images/brlhk.png" alt="BNI Remittance Limited HK"></a>
@@ -58,10 +67,10 @@
         </div>
         <div class="site-block">
           <div class="site-img">
-            <a href="https://permisi-grad-form.web.app"><img src="images/permisihk.png" alt="PERMISI HK"></a>
+            <a href="https://wishes.permisi.hk"><img src="images/permisihk.png" alt="PERMISI HK"></a>
           </div>
           <div class="site-desc">
-            <div class="app-title">2019 Graduation WIshes - PERMISI (Indonesian Students' Association of City University of Hong Kong) (React, Node.js, Firebase)</div>
+            <div class="app-title">2020 & 2019 Graduation WIshes - PERMISI (Indonesian Students' Association of City University of Hong Kong) (React, Next.js, Node.js, Firebase)</div>
           </div>
         </div>
       </div>
