add bivi description

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         Hi! Welcome to my web page!
       </h1>
       <p>My name is <span id="myname">Michael Lim</span>, currently a Computer Science student at the City University of Hong Kong. Currently, I am a part-time software engineer at EventX Limited and Holywings Indonesia and formerly a full-stack developer at SOCIF Hong Kong.</p><br>
+      <p>Also building out Bivi, an online tutoring and mentoring platform step by step.</p><br/>
       <p>I am currently a bit busy right now with things in life, so I have not had the time to make this website prettier. Anyway, thank you for visiting my webpage and looking at my profile. It means a lot to me :).</p>
       <h3 class="action-msg">In the meantime, check out my social media accounts!</h3>
       <div id="soc-med">
@@ -44,6 +45,18 @@
             <div><a href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
             <div style="height: 8px;"></div>
             <div><a href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+          </div>
+        </div>
+      </div>
+      <h3 class="action-msg">Currently I am building my own startup, check us out!</h3>
+      <div id="sites">
+        <div class="site-block">
+          <div class="site-img">
+            <a href="https://bivi.us"><img src="images/bivi.svg" alt="Bivi" style="width: 96px; margin-left: 12px; margin-right: 12px;"></a>
+          </div>
+          <div class="site-desc">
+            <div class="app-title">Bivi</div>
+            <div style="font-weight: normal;">At Bivi, we strive to be <b>THE</b> platform where talented college students and ambitious students can come together.</div>
           </div>
         </div>
       </div>
