--- a/index.html
+++ b/index.html
@@ -27,13 +27,22 @@
       <div id="apps">
         <div class="site-block">
           <div class="site-img">
-            <img src="images/holywings.png" alt="Holywings Indonesia">
+            <img src="images/holywings-attendance.png" alt="Holywings Attendance">
+          </div>
+          <div class="site-desc">
+            <div class="app-title">Holywings Attendance (Flutter)</div>
+            <div><a href="https://play.google.com/store/apps/details?id=com.holywingsindonesia.holywingsattendance"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+          </div>
+        </div>
+        <div class="site-block">
+          <div class="site-img">
+            <img src="images/holywings-new.png" alt="Holywings Indonesia">
           </div>
           <div class="site-desc">
             <div class="app-title">Holywings Indonesia (Flutter)</div>
-            <div><a href="https://apps.apple.com/hk/app/ustransit/id1475481762?l=en"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+            <div><a href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
             <div style="height: 8px;"></div>
-            <div><a href="https://play.google.com/store/apps/details?id=com.socif.ustransit"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+            <div><a href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
           </div>
         </div>
         <div class="site-block">
@@ -42,9 +51,9 @@
           </div>
           <div class="site-desc">
             <div class="app-title">USTransit (React Native)</div>
-            <div><a href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+            <div><a href="https://apps.apple.com/hk/app/ustransit/id1475481762?l=en"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
             <div style="height: 8px;"></div>
-            <div><a href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+            <div><a href="https://play.google.com/store/apps/details?id=com.socif.ustransit"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
           </div>
         </div>
       </div>
