add profile picture to website

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 
   <body>
     <div id="root">
-      <h1>
-        Hi! Welcome to my web page!
-      </h1>
-      <p>My name is <span id="myname">Michael Lim</span>, currently a Computer Science student at the City University of Hong Kong. Currently, I am a part-time software engineer at EventX Limited and Holywings Indonesia and formerly a full-stack developer at SOCIF Hong Kong.</p><br>
-      <p>Also building out Bivi, an online tutoring and mentoring platform step by step.</p><br/>
+      <header>
+        <h1>
+          Hi! Welcome to my web page!
+        </h1>
+        <img src="images/profile.jpeg" id="profile-picture" alt="Michael Lim">
+        <p>My name is <span id="myname">Michael Lim</span>, currently a Computer Science student at the City University of Hong Kong.</p><br>  
+      </header>
+      <p>Currently, I am a part-time software engineer at EventX Limited and Holywings Indonesia and formerly a full-stack developer at SOCIF Hong Kong.</p>
+      <p>Also building out Bivi, an online tutoring and mentoring platform.</p><br />
       <p>I am currently a bit busy right now with things in life, so I have not had the time to make this website prettier. Anyway, thank you for visiting my webpage and looking at my profile. It means a lot to me :).</p>
       <h3 class="action-msg">In the meantime, check out my social media accounts!</h3>
       <div id="soc-med">
@@ -58,7 +62,7 @@
         </div>
       </div>
       <h3 class="action-msg">Currently I am building my own startup, check us out!</h3>
-      <div id="sites">
+      <div id="startups">
         <div class="site-block">
           <div class="site-img">
             <a href="https://bivi.us"><img src="images/bivi.svg" alt="Bivi" style="width: 96px; margin-left: 12px; margin-right: 12px;"></a>
@@ -69,7 +73,17 @@
           </div>
         </div>
       </div>
-      <h3 class="action-msg">Here are some websites I made as side projects: some paid, some for my organization!</h3>
+      <h3 class="action-msg">I also like to do research when I have the time, here are my research project(s):</h3>
+      <div id="research-projects">
+        <div class="site-block">
+          <ul style="padding-left: 16px;">
+            <li>
+              Chan, C., Al-Bashabsheh, A., Huang, H., Lim, M., Tam, D., &amp; Zhao, C. (2019, May 31). Neural entropic estimation: A faster path to mutual information estimation. Retrieved March 24, 2021, from <a href="https://arxiv.org/abs/1905.12957v2" target="_blank">https://arxiv.org/abs/1905.12957v2</a>
+            </li>  
+          </ul>
+        </div>
+      </div>
+      <h3 class="action-msg">Also, here are some websites I made as side projects: some paid, some for my organization!</h3>
       <div id="sites">
         <div class="site-block">
           <div class="site-img">
