--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Michael Lim</title>
     
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/master.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PQWZPV714J"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-PQWZPV714J');
+    </script>
   </head>
 
   <body>
@@ -14,11 +28,11 @@
           Hi! Welcome to my web page!
         </h1>
         <img src="images/profile.jpeg" id="profile-picture" alt="Michael Lim">
-        <p>My name is <span id="myname">Michael Lim</span>, currently a Computer Science student at the City University of Hong Kong.</p><br>  
+        <p>My name is <span id="myname">Michael Lim</span>, a Computer Science student at the City University of Hong Kong.</p><br>  
       </header>
-      <p>Currently, I am a part-time software engineer at EventX Limited and Holywings Indonesia and formerly a full-stack developer at SOCIF Hong Kong.</p>
+      <p>I am a part-time software engineer at EventX Limited and Holywings Indonesia and formerly a full-stack developer at SOCIF Hong Kong.</p>
       <p>Also building out Bivi, an online tutoring and mentoring platform.</p><br />
-      <p>I am currently a bit busy right now with things in life, so I have not had the time to make this website prettier. Anyway, thank you for visiting my webpage and looking at my profile. It means a lot to me :).</p>
+      <p>I am a bit busy right now with things in life, so I have not had the time to make this website prettier. Anyway, thank you for visiting my webpage and looking at my profile. It means a lot to me :).</p>
       <h3 class="action-msg">In the meantime, check out my social media accounts!</h3>
       <div id="soc-med">
         <div><a href="https://www.facebook.com/michaellimair"><img class="soc-med-img" src="images/facebook.png" alt="Facebook"></a></div>
@@ -61,7 +75,7 @@
           </div>
         </div>
       </div>
-      <h3 class="action-msg">Currently I am building my own startup, check us out!</h3>
+      <h3 class="action-msg">I am also building my own startup, check us out!</h3>
       <div id="startups">
         <div class="site-block">
           <div class="site-img">
