add external links

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           Hi! Welcome to my web page!
         </h1>
         <img src="images/profile.jpeg" id="profile-picture" alt="Michael Lim">
-        <p>My name is <span id="myname">Michael Lim</span>, a Computer Science student at the City University of Hong Kong.</p><br>  
+        <p>My name is <a href="https://michaellimair.github.io"><span id="myname">Michael Lim</span></a>, a Computer Science student at the <a href="https://www.cityu.edu.hk" target="_blank">City University of Hong Kong</a>.</p><br>  
       </header>
-      <p>I am a part-time software engineer at EventX Limited and Holywings Indonesia and formerly a full-stack developer at SOCIF Hong Kong.</p>
-      <p>Also building out Bivi, an online tutoring and mentoring platform.</p><br />
+      <p>I am a part-time software engineer at <a href="https://eventx.io" target="_blank">EventX Limited</a> and <a href="https://holywings.com" target="_blank">Holywings Indonesia</a> and formerly a full-stack developer at <a href="https://socif.co/en/" target="_blank">SOCIF Hong Kong</a>.</p>
+      <p>Also building out <a href="https://bivi.us" target="_blank">Bivi</a>, an online tutoring and mentoring platform.</p><br />
       <p>I am a bit busy right now with things in life, so I have not had the time to make this website prettier. Anyway, thank you for visiting my webpage and looking at my profile. It means a lot to me :).</p>
       <h3 class="action-msg">In the meantime, check out my social media accounts!</h3>
       <div id="soc-med">
@@ -104,7 +104,10 @@
             <a href="https://permisi.hk"><img src="images/permisihk.png" alt="PERMISI HK"></a>
           </div>
           <div class="site-desc">
-            <div class="app-title">PERMISI HK Main Website (Indonesian Students' Association of the City University of Hong Kong)</div>
+            <div class="app-title">
+              <p><a href="https://permisi.hk">PERMISI HK Main Website</a> (Indonesian Students' Association of the City University of Hong Kong)</p>
+              <p>Technologies: WordPress, Let's Encrypt, Google Cloud</p>
+            </div>
           </div>
         </div>
         <div class="site-block">
@@ -112,7 +115,10 @@
             <a href="https://daftarkartanu.bniremittance.com"><img src="images/brlhk.png" alt="BNI Remittance Limited HK"></a>
           </div>
           <div class="site-desc">
-            <div class="app-title">KartaNU HK Registration System - BNI Remittance Limited (Hong Kong) (React, Node.js, Firebase)</div>
+            <div class="app-title">
+              <p><a href="https://daftarkartanu.bniremittance.com">KartaNU HK Registration System</a> - BNI Remittance Limited (Hong Kong)</p>
+              <p>Technologies: React, Node.js, Firebase</p>
+            </div>
           </div>
         </div>
         <div class="site-block">
@@ -120,7 +126,10 @@
             <a href="https://wishes.permisi.hk"><img src="images/permisihk.png" alt="PERMISI HK"></a>
           </div>
           <div class="site-desc">
-            <div class="app-title">2020 & 2019 Graduation WIshes - PERMISI (Indonesian Students' Association of City University of Hong Kong) (React, Next.js, Node.js, Firebase)</div>
+            <div class="app-title">
+              <p><a href="https://wishes.permisi.hk">2020</a> & 2019 <a href="https://wishes.permisi.hk">Graduation Wishes</a> - PERMISI (Indonesian Students' Association of City University of Hong Kong)</p>
+              <p>Technologies: React, Next.js, Node.js, Firebase</p>
+            </div>
           </div>
         </div>
       </div>
