--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
         <img src="images/profile.jpeg" id="profile-picture" alt="Michael Lim">
         <p>My name is <a href="https://michaellimair.github.io"><span id="myname">Michael Lim</span></a>, a Computer Science student at the <a href="https://www.cityu.edu.hk" target="_blank">City University of Hong Kong</a>.</p><br>  
       </header>
-      <p>I am a part-time software engineer at <a href="https://eventx.io" target="_blank">EventX Limited</a> and <a href="https://holywings.com" target="_blank">Holywings Indonesia</a> and formerly a full-stack developer at <a href="https://socif.co/en/" target="_blank">SOCIF Hong Kong</a>.</p>
+      <p>Currently finishing up my final year, and happy to say that I am joining <a href="https://jpmorganchase.com">JPMorgan Chase Bank N.A. (Hong Kong)</a> full-time in 2022, where I formerly did a summer internship as a software engineer.</p>
+      <p>I am also formerly a software engineer at <a href="https://eventx.io" target="_blank">EventX Limited</a>, <a href="https://holywings.com" target="_blank">Holywings Indonesia</a>, and <a href="https://socif.co/en/" target="_blank">SOCIF Hong Kong</a>.</p>
       <p>Also building out <a href="https://bivi.us" target="_blank">Bivi</a>, an online tutoring and mentoring platform.</p><br />
-      <p>I am a bit busy right now with things in life, so I have not had the time to make this website prettier. Anyway, thank you for visiting my webpage and looking at my profile. It means a lot to me :).</p>
-      <h3 class="action-msg">In the meantime, check out my social media accounts!</h3>
+
+      <h3 class="action-msg">Check out my social media accounts!</h3>
       <div id="soc-med">
         <div><a href="https://www.facebook.com/michaellimair"><img class="soc-med-img" src="images/facebook.png" alt="Facebook"></a></div>
         <div><a href="https://instagram.com/michaelxlimb"><img class="soc-med-img" src="images/ig.png" alt="Instagram"></a></div>
