add music and education

--- a/index.html
+++ b/index.html
@@ -32,51 +32,99 @@
       </header>
       <p>Currently finishing up my final year, and happy to say that I am joining <a href="https://jpmorganchase.com">JPMorgan Chase Bank N.A. (Hong Kong)</a> full-time in 2022, where I formerly did a summer internship as a software engineer.</p>
       <p>I am also formerly a software engineer at <a href="https://eventx.io" target="_blank">EventX Limited</a>, <a href="https://holywings.com" target="_blank">Holywings Indonesia</a>, and <a href="https://socif.co/en/" target="_blank">SOCIF Hong Kong</a>.</p>
-      <p>Also building out <a href="https://bivi.us" target="_blank">Bivi</a>, an online tutoring and mentoring platform.</p><br />
-
-      <h3 class="action-msg">Check out my social media accounts!</h3>
-      <div id="soc-med">
-        <div><a href="https://www.facebook.com/michaellimair"><img class="soc-med-img" src="images/facebook.png" alt="Facebook"></a></div>
-        <div><a href="https://instagram.com/michaelxlimb"><img class="soc-med-img" src="images/ig.png" alt="Instagram"></a></div>
-        <div><a href="https://www.linkedin.com/in/michaellimair"><img class="soc-med-img" src="images/linkedin.png" alt="LinkedIn"></a></div>
-        <div><a href="https://www.github.com/michaellimair"><img class="soc-med-img" src="images/github.svg" alt="GitHub"></a></div>
-        <div><iframe class="soc-med-img" allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fmichaellimair&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe></div>
+      <div class="edu-container">
+        <h2 class="action-msg">Education</h2>
+        <div class="edu-row">
+          <div class="edu-image-container">
+            <a target="_blank" rel="noopener noreferrer" href="https://www.cityu.edu.hk/" title="City University of Hong Kong">
+              <img class="edu-image" src="images/cityu.png" alt="City University of Hong Kong">
+            </a>
+          </div>
+          <div class="edu-info">
+            <p class="edu-inst">City University of Hong Kong</p>
+            <p>Bachelor of Science (BSc) in Computer Science, Minor in Finance</p>
+          </div>
+        </div>
+        <div class="edu-row">
+          <div class="edu-image-container">
+            <a target="_blank" rel="noopener noreferrer" href="https://warwick.ac.uk/" title="University of Warwick">
+              <img class="edu-image" src="images/warwick.jpg" alt="University of Warwick">
+            </a>
+          </div>
+          <div class="edu-info">
+            <p class="edu-inst">University of Warwick</p>
+            <p>Exchange Student in Computer Science</p>
+          </div>
+        </div>
+        <div class="edu-row">
+          <div class="edu-image-container">
+            <a target="_blank" rel="noopener noreferrer" href="https://cmu.edu/" title="Carnegie Mellon University">
+              <img class="edu-image" src="images/cmu.png" alt="Carnegie Mellon University">
+            </a>
+          </div>
+          <div class="edu-info">
+            <p class="edu-inst">Carnegie Mellon University</p>
+            <p>Exchange Student in Computer Science</p>
+          </div>
+        </div>
+        <div class="edu-row">
+          <div class="edu-image-container">
+            <a target="_blank" rel="noopener noreferrer" href="https://www.santa-laurensia.com/sutera" title="Santa Laurensia School">
+              <img class="edu-image" src="images/santa-laurensia.png" alt="Santa Laurensia School">
+            </a>
+          </div>
+          <div class="edu-info">
+            <p class="edu-inst">Santa Laurensia School</p>
+            <p>SMA Ijazah, Science Stream</p>
+          </div>
+        </div>
       </div>
-      <h3 class="action-msg">Check out the past apps that I made at various points in my life as a computer scientist! I am really proud to have them as my "child".</h3>
-      <div id="apps">
-        <div class="site-block">
-          <div class="site-img">
-            <img src="images/holywings-attendance.png" alt="Holywings Attendance">
-          </div>
-          <div class="site-desc">
-            <div class="app-title">Holywings Attendance (Flutter)</div>
-            <div><a href="https://play.google.com/store/apps/details?id=com.holywingsindonesia.holywingsattendance"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
-          </div>
+      <div class="site-row">
+        <div class="site-col music-container">
+          <h2 class="action-msg">My Music</h2>
+          <p>Yes, I am a Software Engineer by day and DJ by night. Mostly listen to Trance, House, and Techno, but I spin any kind of music as long as it gets the crowd going!</p>
+          <iframe width="100%" height="300" class="sc-embed" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1370610421&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/michaellimair" title="Michael Lim" target="_blank" style="color: #cccccc; text-decoration: none;">Michael Lim</a> · <a href="https://soundcloud.com/michaellimair/sets/mixtapes" title="Mixtapes" target="_blank" style="color: #cccccc; text-decoration: none;">Mixtapes</a></div>
+          <iframe width="100%" height="120" class="middle-music" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fmichaellimair%2F" frameborder="0" ></iframe>
+          <iframe width="100%" height="400" src="https://www.youtube.com/embed/videoseries?list=PL_J6flGZeHL2kPqBXJBI9Dxn9QlCeq2SV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="site-block">
-          <div class="site-img">
-            <img src="images/holywings-new.png" alt="Holywings Indonesia">
-          </div>
-          <div class="site-desc">
-            <div class="app-title">Holywings Indonesia (Flutter)</div>
-            <div><a href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
-            <div style="height: 8px;"></div>
-            <div><a href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
-          </div>
-        </div>
-        <div class="site-block">
-          <div class="site-img">
-            <img src="images/ustransit.png" alt="USTransit">
-          </div>
-          <div class="site-desc">
-            <div class="app-title">USTransit (React Native)</div>
-            <div><a href="https://apps.apple.com/hk/app/ustransit/id1475481762?l=en"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
-            <div style="height: 8px;"></div>
-            <div><a href="https://play.google.com/store/apps/details?id=com.socif.ustransit"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+        <div class="site-col apps-container">
+          <h2 class="action-msg">Some of the apps that I'm proud to be a part of</h2>
+          <div id="apps">
+            <div class="site-block">
+              <div class="site-img">
+                <img src="images/holywings-attendance.png" alt="Holywings Attendance">
+              </div>
+              <div class="site-desc">
+                <div class="app-title">Holywings Attendance (Flutter)</div>
+                <div><a href="https://play.google.com/store/apps/details?id=com.holywingsindonesia.holywingsattendance"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+              </div>
+            </div>
+            <div class="site-block">
+              <div class="site-img">
+                <img src="images/holywings-new.png" alt="Holywings Indonesia">
+              </div>
+              <div class="site-desc">
+                <div class="app-title">Holywings Indonesia (Flutter)</div>
+                <div><a href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+                <div style="height: 8px;"></div>
+                <div><a href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+              </div>
+            </div>
+            <div class="site-block">
+              <div class="site-img">
+                <img src="images/ustransit.png" alt="USTransit">
+              </div>
+              <div class="site-desc">
+                <div class="app-title">USTransit (React Native)</div>
+                <div><a href="https://apps.apple.com/hk/app/ustransit/id1475481762?l=en"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+                <div style="height: 8px;"></div>
+                <div><a href="https://play.google.com/store/apps/details?id=com.socif.ustransit"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <h3 class="action-msg">I am also building my own startup, check us out!</h3>
+      <h2 class="action-msg">I am also building my own startup, check us out!</h2>
       <div id="startups">
         <div class="site-block">
           <div class="site-img">
@@ -88,7 +136,7 @@
           </div>
         </div>
       </div>
-      <h3 class="action-msg">I also like to do research when I have the time, here are my research project(s):</h3>
+      <h2 class="action-msg">Research Projects</h2>
       <div id="research-projects">
         <div class="site-block">
           <ul style="padding-left: 16px;">
@@ -98,8 +146,9 @@
           </ul>
         </div>
       </div>
-      <h3 class="action-msg">Also, here are some websites I made as side projects: some paid, some for my organization!</h3>
+      <h2 class="action-msg">Practical Projects</h2>
       <div id="sites">
+        <p>Some of the projects are made for my organization, while some of them are made as a freelance gig.</p>
         <div class="site-block">
           <div class="site-img">
             <a href="https://permisi.hk"><img src="images/permisihk.png" alt="PERMISI HK"></a>
@@ -128,18 +177,29 @@
           </div>
           <div class="site-desc">
             <div class="app-title">
-              <p><a href="https://wishes.permisi.hk">2020</a> & 2019 <a href="https://wishes.permisi.hk">Graduation Wishes</a> - PERMISI (Indonesian Students' Association of City University of Hong Kong)</p>
+              <p><a href="https://wishes.permisi.hk">2020 & 2019 Graduation Wishes</a> - PERMISI (Indonesian Students' Association of City University of Hong Kong)</p>
               <p>Technologies: React, Next.js, Node.js, Firebase</p>
             </div>
           </div>
         </div>
       </div>
+      <h3 class="action-msg text-center">Reach out and let's connect!</h3>
+      <div id="soc-med">
+        <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://www.github.com/michaellimair"><img class="soc-med-img" src="images/github.svg" alt="GitHub"></a></div>
+        <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/michaellimair"><img class="soc-med-img" src="images/facebook.png" alt="Facebook"></a></div>
+        <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/michaelxlimb"><img class="soc-med-img" src="images/ig.png" alt="Instagram"></a></div>
+        <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/michaellimair"><img class="soc-med-img" src="images/linkedin.png" alt="LinkedIn"></a></div>
+        <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UC_Ovswi_aUdREU7CXGsKWwQ"><img class="soc-med-img" src="images/youtube.png" alt="YouTube"></a></div>  
+        <div class="soc-med-row"><iframe class="soc-med-img" allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fmichaellimair&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe></div>
+        <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://mixcloud.com/michaellimair"><img class="soc-med-img" src="images/mix.png" alt="Mixcloud"></a></div>  
+      </div>
     </div>  
     </div>
     <footer>
+      <p class="text-center made-by">Made by Michael Lim</p>
       <div>
-        <p>Google Play and the Google Play logo are trademarks of Google LLC.</p>
-        <p>Apple, the Apple logo, and App Store are trademarks of Apple Inc., registered in the U.S. and other countries.</p>
+        <p class="disclaimer">Google Play and the Google Play logo are trademarks of Google LLC.</p>
+        <p class="disclaimer">Apple, the Apple logo, and App Store are trademarks of Apple Inc., registered in the U.S. and other countries.</p>
       </div>
     </footer>
   </body>
